# cadex_assignments

./: .gitignore  README.md
assignment_1/: README.md  curves.py  models.py  requirements.txt
assignment_3/: README.md
assignment_3/sources/: CMakeLists.txt  Makefile  main.cpp  triangle_area.cpp  triangle_area.h
assignment_5/: README.md
